# camera_lidar_calibration

./: .gitignore  .gitmodules  CMakeLists.txt
config/: camera.yaml  params.yaml
docs/: algorithm.md
include/cam_lidar_calib/: camera_detector.hpp  types.hpp
src/: camera_detector.cpp  camera_intrinsics.cpp  config.cpp  main.cpp
test/: test_calibration_result.cpp
